# Project-New-Reign---Nemesis-Main

./: .clang-format  .gitignore  Bug Report (2017-Dec-30 211240).txt  CMakeLists.txt  Exprtk License.txt  Global.cpp  Global.h  Nemesis Engine.rc  NemesisEngine.qrc  NemesisEngine.sln  NemesisEngine.ui  NemesisEngine.vcxproj  NemesisEngine.vcxproj.filters  Project 2.sln  Project 2.vcxproj  Project 2.vcxproj.filters  README.md  alphanum.hpp  animationdata_list.txt  animationutility.cpp  animationutility.h  behavior_path.txt  behaviorcheck.cpp  behaviorcheck.h  behaviorgenerator.cpp  behaviorgenerator.h  compute.cpp  compute.h  dataunification.cpp  dataunification.h  dummy.txt  filechecker.cpp  filechecker.h  generator_utility.cpp  generator_utility.h  lastupdate.cpp  lastupdate.h  main.cpp  modlist.cpp  nemesisinfo.cpp  (+5 more)
CMake/: Boost.cmake  Python.cmake  Qt.cmake
GeneratedFiles/: qrc_NemesisEngine.cpp  ui_NemesisEngine.h
Logging/: debugmsg.cpp  debugmsg.h
Nemesis Main GUI/: BehaviorListView.cpp  BehaviorListView.h  ErrorMsgBox.cpp  ErrorMsgBox.h  Nemesis Main GUI.vcxproj  Nemesis Main GUI.vcxproj.filters  NemesisMainGUI.cpp  NemesisMainGUI.h  NemesisMainGUI.qrc  NemesisMainGUI.ui  PatchLog.txt  UpdateLog.txt  animationdata_list  animationdata_list.txt  animationsetdata_list  behavior_joints  behavior_joints.txt  behavior_path  behavior_path.txt  behavior_project  behavior_project_path  engine_update  main.cpp  master.cpp  master.h  nemesis.ini  progressup.cpp  progressup.h  resource.h  version
Nemesis Main GUI/GeneratedFiles/: qrc_NemesisMainGUI.cpp  ui_NemesisMainGUI.cpp  ui_NemesisMainGUI.h
Nemesis Main GUI/alternate animation/: _2hmatk.txt  _2hmidle.txt  _2hmstag.txt  _2hwstag.txt  _axeeqp.txt  _bowidle.txt  _h2hatk.txt  _h2hatkpow.txt  _h2heqp.txt  _magcastmt.txt  _magmt.txt  _shield.txt  _shout.txt  _sneakidle.txt  alternate animation 2.script  alternate animation.script  alternate animation.script.bak  nemesis pcea.script
Nemesis Main GUI/atk/: option_list.txt
Nemesis Main GUI/cache/: mod settings  settings
Nemesis Main GUI/cached_behaviors/: sprintbehavior.hkx
Nemesis Main GUI/data/: Nemesis PCEA.esp  compile.bat
Nemesis Main GUI/languages/: english.txt  简体中文.txt  简体字.txt
Nemesis Main GUI/src/: AnimProgressBar.cpp  AnimProgressBar.h  BehaviorInfo.cpp  BehaviorListModel.cpp  BehaviorListModel.h  BehaviorListRowColor.cpp  BehaviorListRowColor.h  CmdLaunch.cpp  CmdLaunch.h  DebugLog.cpp  DebugLog.h  MessageHandler.cpp  MessageHandler.h  MultiInstanceCheck.cpp  MultiInstanceCheck.h  ScrollBar.cpp  SettingsSave.cpp  SettingsSave.h  version.h
Nemesis Main GUI/temp_behaviors/: 0_master.txt  1hm_locomotion.txt  animationdatasinglefile.txt  animationsetdatasinglefile.txt  attackbehavior.txt  bashbehavior.txt  behavior.txt  blockbehavior.txt  bow_direction_behavior.txt  crossbow_direction_behavior.txt  defaultfemale.txt  defaultmale.txt  horsebehavior.txt  idlebehavior.txt  magic_readied_direction_behavior.txt  magicbehavior.txt  magicmountedbehavior.txt  nemesis_core.txt  shout_behavior.txt  shoutmounted_behavior.txt  sprintbehavior.txt  staggerbehavior.txt  weapequip.txt  weapunequip.txt
add animation/: alternateanimation.cpp  alternateanimation.h  animationdata.cpp  animationdata.h  animationdatatracker.cpp  animationinfo.cpp  animationinfo.h  animationsetdata.cpp  animationsetdata.h  animationthread.cpp  animationthread.h  furniture.cpp  furniture.h  gettemplate.cpp  gettemplate.h  grouptemplate.cpp  grouptemplate.h  import.cpp  import.h  killmove.cpp  killmove.h  nodejoint.cpp  nodejoint.h  optionlist.cpp  optionlist.h  paired.cpp  paired.h  playerexclusive.cpp  playerexclusive.h  registeranimation.cpp  registeranimation.h  singletemplate.cpp  singletemplate.h  stringsplit.cpp  stringsplit.h  templateprocessing.cpp  templateprocessing.h  templatetree.h  tinyexpress.c  tinyexpress.h
alternate animation/: _1hmatk.txt  _bowatk.txt  _bowblock.txt  _cboweqp.txt  _dageqp.txt  _jump.txt  _maceqp.txt  _magidle.txt  alternate animation.script
behavior templates/: event_property_2.txt  transitions.txt
behavior templates.bak/: anim object.txt
behavior templates.bak/0_master/: #newanimation$0.nmd
behavior templates/0_master/: blend_transition.txt  transitions.txt
behavior templates/km/: option_list.txt
behavior templates/ofa/: option_list.txt
data/scripts/: Nemesis_AA_Core.pex
functions/: atomiclock.h  functionupdate.cpp  functionupdate.h  functionwriter.h  readtextfile.h  renew.cpp  renew.h  writetextfile.h  wstrconvert.cpp  wstrconvert.h
header/: Global.h  connector.h  debugmsg.h  nemesisinfo.h  resource.h  version.h
header/generate/: addanims.h  alternateanimation.h  animationdata.h  animationdatatracker.h  animationsetdata.h  animationsetdatatype.h  animationutility.h  behaviorcheck.h  behaviorgenerator.h  behaviorprocess.h  behaviorsubprocess.h  behaviortype.h  generator_utility.h  installscripts.h
header/ui/: AnimProgressBar.h  BehaviorInfo.h  BehaviorListModel.h  BehaviorListView.h  CmdLaunch.h  MultiInstanceCheck.h  NemesisEngine.h  ProgressUp.h  SettingsSave.h
header/update/: dataunification.h  functionupdate.h  updateprocess.h
header/utilities/: filechecker.h  readtextfile.h  renew.h  writetextfile.h  wstrconvert.h
include/: AnimDataClipInfo.h  AnimDataClipMovementData.h  Global.h  connector.h  debuglog.h  debugmsg.h  externalscript.h  nemesisinfo.h  resource.h  version.h
include/Parser/: ParsableObject.h  ScopeMachine.h
include/Testers/: AnimationDataSingleFileTester.h  AnimationSetDataProjectTester.h  AnimationSetDataSingleFileTester.h  AnimationSetDataStateTester.h  HkxBehaviorTester.h  HkxNodeTester.h  MasterRepositoryTester.h  ModifierTester.h  NObjectTester.h  TemplateTester.h  TesterRepo.h
include/animdata/: AnimDataInfo.h  AnimDataMovementData.h  AnimDataProjectFactory.h  (+10 more)
resources/: Nemesis Engine.rc  NemesisEngine.qrc  RCa11856
src/: Global.cpp  connector.cpp  debuglog.cpp  debugmsg.cpp  externalscript.cpp  main.cpp  nemesisinfo.cpp
test environment/: hkxcmd license  nemesis.ini  version
テスト/: nemesis.ini
(+24989 files in other folders)
